# Diploma

./: .gitignore  Descriptor Tables.xlsx  Diplomirane_2025_07.10.2024.docx  README.md  additional_info.txt  diploma_pcb.txt  parts.xlsx  ~$oplomna.docx  ~$plomirane_2025_07.10.2024.docx  ~$ПЛОМНА  РАБОТА.docx
Arduino_Serial/: Arduino_Serial.ino
Driver_shared_folder/: .Module.symvers.cmd  .main.o.cmd  .modules.order.cmd  .my_module.ko.cmd  .my_module.mod.cmd  .my_module.mod.o.cmd  .my_module.o.cmd  .test_modules.mod.cmd  Makefile  ch340.c  commands.txt  main.c  main.h  modules.order  my_module.ko  my_module.mod  my_module.mod.c  usb_skeleton.c
Entropy device/: CMakeLists.txt  commands.txt  entropy.c  queue.c  usb_common.h  usb_protocol.h
GUI/: Button.cpp  Button.h  ColorUnits.cpp  ColorUtils.h  Constants.h  GUI.vcxproj  GUI.vcxproj.filters  NumberDisplay.cpp  NumberDisplay.h  Obj.h  SDLSerialVisualizer.cpp  SDLSerialVisualizer.h  SDLVisualizer.cpp  SDLVisualizer.h  SerialManager.h  fd.h  main.cpp  serial_data.txt
Raspberry pico/: commands.txt  dev_lowlevel.c  dev_lowlevel.h
Raspberry pico/blink/: CMakeLists.txt  blink.c
V2/Entropy device/: CMakeLists.txt  dev_lowlevel.c  queue.c  usb_protocol.c
arduino_sketch/: arduino_sketch.ino
dev_lowlevel/: CMakeLists.txt  commands.txt  dev_lowlevel.c  queue.c  queue.h  usb_protocol.h
diploma_pcb/: #auto_saved_files#  diploma_pcb-NPTH-drl.gbr  diploma_pcb-job.gbrjob  diploma_pcb.kicad_pcb  diploma_pcb.kicad_prl  diploma_pcb.kicad_pro  diploma_pcb.kicad_sch  fp-info-cache  fp-lib-table  ~diploma_pcb.kicad_sch.lck  (+1 more)
(+860 files in other folders)
